--- a/Flexbox/flex-wrap/index.html
+++ b/Flexbox/flex-wrap/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>All The necessary items for the Flxbox</h1>
+    <h1>Flex Wrap</h1>
     <div class="container">
         <div class="item a">A</div>
         <div class="item b">B</div>
