--- a/Flexbox/align-content/index.html
+++ b/Flexbox/align-content/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Align Items</h1>
+    <h1>Align Content</h1>
     <div class="container">
         <div class="item a">A</div>
         <div class="item b">B</div>
